# open-pulse-grimoirelab

dashboards-sigils/: intake_new_projects.sh  make_index_patterns.sh  upload_sigils_to_opensearch.sh
default-grimoirelab-settings/: README.md  projects.json  setup.cfg
docker-compose/: docker-compose.yml
