[general]
short_name = GrimoireLab
update = true
min_update_delay = 60
debug = false
logs_dir = /home/grimoire/logs
bulk_size = 100
scroll_size = 100
aliases_file = /home/grimoire/aliases.json

[projects]
projects_file = /home/grimoire/conf/projects.json

[es_collection]
url = https://admin:GrimoireLab.1@opensearch-node1:9200

[es_enrichment]
url = https://admin:GrimoireLab.1@opensearch-node1:9200
autorefresh = true

[sortinghat]
host = nginx
user = admin
password = admin
port = 8000
path = /identities/api/
ssl = false
database = sortinghat_db
autoprofile = [github, git]
matching = [email,name,username]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true

[panels]
kibiter_time_from =
kibiter_default_index =
kibiter_url =
kibiter_version =

[phases]
collection = true
identities = true
enrichment = true
panels = false

[git]
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github]
api-token=<YOUR_TOKEN>
#enterprise-url = <YOUR_GITHUB_ENTERPRISE_URL>
raw_index = github_demo_raw
sleep-for-rate = true
sleep-time = "300"
enriched_index = github_demo_enriched

#[gitlab:issues]
#api-token = <YOUR_API_TOKEN_HERE>
#raw_index = gitlab_issues_demo_raw
#enriched_index = gitlab_issues_demo_enriched
#no-archive = true
#enterprise-url = <YOUR_GITLAB_INSTANCE_URL>
#sleep-for-rate = true

#[gitlab:merge]
#api-token = <YOUR_API_TOKEN_HERE>
#raw_index = gitlab_merges_demo_raw
#enriched_index = gitlab_merges_demo_enriched
#no-archive = true
#enterprise-url = <YOUR_GITLAB_INSTANCE_URL>
#category = merge_request
#sleep-for-rate = true

## studies based on enriched indexes

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash
